wordcloud is very pretty now

--- a/APP/styles.css
+++ b/APP/styles.css
@@ -26,3 +26,9 @@ input::placeholder {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+#topbar {
+    background-color: #AAAAAA;
+    height: 50px;
+    width: 100%;
+}
