--- a/APP/styles.css
+++ b/APP/styles.css
@@ -78,6 +78,8 @@ input::placeholder {
 }
 
 #description-box {
+    padding-left: 10px;
+    padding-top: 10px;
     border: 1px solid black;
     height: 400px;
     width: 200px;
