--- a/APP/styles.css
+++ b/APP/styles.css
@@ -15,7 +15,9 @@ input::placeholder {
     font-style: italic;
 }
 
-
+text {
+    cursor: pointer;
+}
 
 .dropdown-button {
     border: 1px solid black;
@@ -92,4 +94,12 @@ input::placeholder {
     top: 873px;
     right: 50px;
     border-radius: 20px;
+}
+
+#chart {
+    height: 350px;
+    width: 350px;
+    right: 25px;
+    top: 75px;
+    position: absolute;
 }
