--- a/APP/styles.css
+++ b/APP/styles.css
@@ -36,7 +36,7 @@ text {
 
 
 #searchbar {
-    margin-left: 40%;
+    margin: auto;
     margin-top: 20%;
     width: 20%;
     height: 20%;
@@ -110,4 +110,8 @@ canvas {
 #chart-frequency {
     right: 25px;
     top: 500px;
+}
+
+#related-words {
+    width: 200px; height: 400px; border: 1px solid black; position: absolute; left: 50px; bottom: 50px;
 }
